2003-08-21	Till Straumann <strauman@slac.stanford.edu>

	PR 457/bsps
	* rtems/powerpc/registers.h: Add a few definitions for the PowerPC
	thermal assistance unit.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-07-18	Till Straumann <strauman@slac.stanford.edu>

	PR 288/rtems
	* rtems/new-exceptions/cpu.h: _ISR_Nest_level is now properly
	maintained and does not reside in SPRG0.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-20	Till Straumann <strauman@slac.stanford.edu>

	PR 349/bsps
	* rtems/powerpc/registers.h: Add definitions for HID1 and DABR SPRs.

2002-12-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require autoconf-2.57 + automake-1.7.2.
	* Makefile.am: Eliminate C_O_FILES, S_O_FILES, libscorecpu_a_OBJECTS.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Fix package name.

2002-11-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems/new-exceptions/cpu.h: Remove sections on 
	CPU_INLINE_ENABLE_DISPATCH and CPU_UNROLL_ENQUEUE_PRIORITY.
	* rtems/old-exceptions/cpu.h: Remove sections on 
	CPU_INLINE_ENABLE_DISPATCH and CPU_UNROLL_ENQUEUE_PRIORITY.
	* rtems/score/cpu.h: Insert sections on
	CPU_INLINE_ENABLE_DISPATCH and CPU_UNROLL_ENQUEUE_PRIORITY.

2002-10-31	Joel Sherrill <joel@OARcorp.com>

	* rtems/new-exceptions/cpu.h: Removed warnings.


2002-10-31	Joel Sherrill <joel@OARcorp.com>

	* rtems/new-exceptions/cpu.h: Removed warnings.

2002-10-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add nostdinc to AM_INIT_AUTOMAKE.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-07-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Build libscorecpu.a instead of rtems-cpu.rel.

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use .$(OBJEXT) instead of .o.
